src/scss/index.scss
/* ... */
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    width: 100%;
    margin-top: calc(#{$contactHeight} * 1.4);
    padding-top: calc(#{$contactHeight} * 1.2);
    overflow-x: hidden;

    & > .text-content {
        width: 70%;
        display: flex;
        flex-direction: column;

        h1, h2, p {
            align-self: flex-start;
        }

        p {
            margin-top: 1rem;
        }

        ul {
            margin: 0;
        }
        &:last-child {
            padding-bottom: 3rem;
        }
    }
}

.about-container, .contact-container {
    justify-content: flex-start;
    gap: 2rem;
    align-items: center;

    & > div {
        width: 75%;
        display: flex;
        flex-direction: column;
        align-items: center;

        p {
            align-self: flex-start;
        }

        ul {
            margin: 0;
        }
        &:last-child {
            padding-bottom: 3rem;
        }
    }
}

.contact-container {
    & > div {
        margin-top: 10vh;
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        & > div {
            align-self: flex-start;
            width: 40%;
        }
        form {
            align-self: flex-end;
            display: flex;
            flex-direction: column;
            width: 40%;

            & > input, & > textarea {
                margin-bottom: 1rem;
                outline: none;
                // border-radius: 10px;
                border-top-left-radius: 10px;
                border-bottom-right-radius: 10px;
                border: none;
                background: rgba($darkmode-bg-color, 0.85);
                color: white;
                padding: 0.5rem;

                &::placeholder {
                    color: white;
                }
            }

            button {
                width: 40%;
                margin: 1rem auto 0;
                background: rgba($darkmode-bg-color, 0.85);
                padding: 0.5rem;
                color: white;
                border-radius: 10px;
            }

            textarea {
                resize: none;
            }
        }
    }
}

#home {
    display: none;
}

#projects {
    display: flex;
}

#contact {
    display: none;
}
/* ... */

